bdr.BDR.scala.error
Compilation error:
BDR:5: error: '(' expected but identifier found.
  if m="R" right()
     ^BDR:6: error: '(' expected but identifier found.
  if m="L" left()
     ^BDR:7: error: '(' expected but identifier found.
  if m="I" {
     ^BDR:10: error: '(' expected but identifier found.
  if m="A" forward();
     ^BDR:10: error: illegal start of simple expression
  if m="A" forward();
                    ^BDR:11: error: '(' expected but identifier found.
  if m="B" {forward();forward();}
     ^BDR:12: error: '(' expected but identifier found.
  if m="C" {forward();forward();forward()}
     ^BDR:13: error: '(' expected but identifier found.
  if m="Z" backward();
     ^BDR:13: error: illegal start of simple expression
  if m="Z" backward();
                     ^BDR:14: error: '(' expected but identifier found.
  if m="Y" {backward();backward();}
     ^BDR:15: error: '(' expected but identifier found.
  if m="X" {backward();backward();backward();}
     ^BDR:16: error: illegal start of simple expression
  else finished = true } 
                       ^